자동매매 리스트 조회 완료

--- a/Trading/pytrader.ui
+++ b/Trading/pytrader.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1339</width>
+    <width>1353</width>
     <height>963</height>
    </rect>
   </property>
@@ -311,7 +311,7 @@
       <rect>
        <x>20</x>
        <y>180</y>
-       <width>801</width>
+       <width>791</width>
        <height>131</height>
       </rect>
      </property>
@@ -323,7 +323,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>799</width>
+        <width>789</width>
         <height>129</height>
        </rect>
       </property>
@@ -424,6 +424,19 @@
        <string>상태</string>
       </property>
      </column>
+    </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>710</x>
+       <y>230</y>
+       <width>93</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>조회</string>
+     </property>
     </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_4">
@@ -635,72 +648,13 @@
      </property>
     </widget>
    </widget>
-   <widget class="QGroupBox" name="groupBox_7">
-    <property name="geometry">
-     <rect>
-      <x>1150</x>
-      <y>390</y>
-      <width>171</width>
-      <height>271</height>
-     </rect>
-    </property>
-    <property name="title">
-     <string>관심 종목</string>
-    </property>
-    <widget class="QLabel" name="label_10">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>64</width>
-       <height>15</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>추가</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_5">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>30</y>
-       <width>91</width>
-       <height>21</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_6">
-     <property name="geometry">
-      <rect>
-       <x>50</x>
-       <y>60</y>
-       <width>91</width>
-       <height>21</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_5">
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>90</y>
-       <width>93</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>추가</string>
-     </property>
-    </widget>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1339</width>
+     <width>1353</width>
      <height>26</height>
     </rect>
    </property>
