--- a/Trading/pytrader.ui
+++ b/Trading/pytrader.ui
@@ -227,9 +227,9 @@
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>310</x>
       <y>20</y>
-      <width>841</width>
+      <width>951</width>
       <height>361</height>
      </rect>
     </property>
@@ -283,8 +283,8 @@
     <widget class="QCheckBox" name="checkBox">
      <property name="geometry">
       <rect>
-       <x>580</x>
-       <y>330</y>
+       <x>700</x>
+       <y>320</y>
        <width>111</width>
        <height>19</height>
       </rect>
@@ -296,7 +296,7 @@
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>700</x>
+       <x>820</x>
        <y>320</y>
        <width>93</width>
        <height>28</height>
@@ -306,71 +306,53 @@
       <string>조회</string>
      </property>
     </widget>
-    <widget class="QScrollArea" name="scrollArea">
+    <widget class="QTableWidget" name="tableWidget_2">
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>180</y>
-       <width>791</width>
-       <height>131</height>
+       <y>160</y>
+       <width>921</width>
+       <height>141</height>
       </rect>
      </property>
-     <property name="widgetResizable">
-      <bool>true</bool>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
      </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>789</width>
-        <height>129</height>
-       </rect>
+     <column>
+      <property name="text">
+       <string>종목코드</string>
       </property>
-      <widget class="QTableWidget" name="tableWidget_2">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>791</width>
-         <height>141</height>
-        </rect>
-       </property>
-       <property name="layoutDirection">
-        <enum>Qt::LeftToRight</enum>
-       </property>
-       <column>
-        <property name="text">
-         <string>종목코드</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>종목명</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>매입가</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>현재가</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>평가손익</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>수익률(%)</string>
-        </property>
-       </column>
-      </widget>
-     </widget>
+     </column>
+     <column>
+      <property name="text">
+       <string>종목명</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>보유수량</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>매입가</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>현재가</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>평가손익</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>수익률(%)</string>
+      </property>
+     </column>
     </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_3">
