--- a/Trading/pytrader.ui
+++ b/Trading/pytrader.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1308</width>
-    <height>889</height>
+    <width>1327</width>
+    <height>957</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -427,30 +427,17 @@
       <x>890</x>
       <y>390</y>
       <width>371</width>
-      <height>451</height>
+      <height>501</height>
      </rect>
     </property>
     <property name="title">
      <string>조건식 자동매매</string>
     </property>
-    <widget class="QPushButton" name="pushButton_9">
-     <property name="geometry">
-      <rect>
-       <x>270</x>
-       <y>30</y>
-       <width>93</width>
-       <height>28</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>거래량 계산</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_5">
      <property name="geometry">
       <rect>
        <x>270</x>
-       <y>60</y>
+       <y>50</y>
        <width>71</width>
        <height>28</height>
       </rect>
@@ -488,7 +475,7 @@
        <x>10</x>
        <y>140</y>
        <width>351</width>
-       <height>251</height>
+       <height>311</height>
       </rect>
      </property>
     </widget>
@@ -522,7 +509,7 @@
      <property name="geometry">
       <rect>
        <x>260</x>
-       <y>400</y>
+       <y>460</y>
        <width>93</width>
        <height>28</height>
       </rect>
@@ -564,7 +551,7 @@
       <x>70</x>
       <y>660</y>
       <width>811</width>
-      <height>181</height>
+      <height>231</height>
      </rect>
     </property>
     <property name="title">
@@ -573,14 +560,14 @@
     <widget class="QPushButton" name="pushButton_4">
      <property name="geometry">
       <rect>
-       <x>620</x>
+       <x>710</x>
        <y>60</y>
        <width>93</width>
        <height>28</height>
       </rect>
      </property>
      <property name="text">
-      <string>그래프 조회</string>
+      <string>바로가기</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_9">
@@ -623,17 +610,17 @@
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>90</y>
+       <y>100</y>
        <width>181</width>
-       <height>81</height>
+       <height>121</height>
       </rect>
      </property>
     </widget>
     <widget class="QLabel" name="label_10">
      <property name="geometry">
       <rect>
-       <x>620</x>
-       <y>40</y>
+       <x>720</x>
+       <y>30</y>
        <width>64</width>
        <height>15</height>
       </rect>
@@ -642,17 +629,171 @@
       <string>차트조회</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="pushButton_10">
+    <widget class="QLabel" name="label_11">
      <property name="geometry">
       <rect>
-       <x>620</x>
-       <y>100</y>
+       <x>243</x>
+       <y>30</y>
+       <width>121</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>비율별 매수매도</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_12">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>60</y>
+       <width>64</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>종목코드</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_4">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>60</y>
+       <width>81</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>90</y>
+       <width>51</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>비율</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_5">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>90</y>
+       <width>81</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_9">
+     <property name="geometry">
+      <rect>
+       <x>460</x>
+       <y>130</y>
        <width>93</width>
        <height>28</height>
       </rect>
      </property>
      <property name="text">
-      <string>분봉차트</string>
+      <string>계산</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_14">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>30</y>
+       <width>81</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>거래량 확인</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_11">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>130</y>
+       <width>61</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>매수</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_12">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>130</y>
+       <width>61</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>매도</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_15">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>60</y>
+       <width>64</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>종목코드</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_6">
+     <property name="geometry">
+      <rect>
+       <x>500</x>
+       <y>60</y>
+       <width>81</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_16">
+     <property name="geometry">
+      <rect>
+       <x>420</x>
+       <y>90</y>
+       <width>81</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>목표거래량</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_7">
+     <property name="geometry">
+      <rect>
+       <x>500</x>
+       <y>90</y>
+       <width>81</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QTextEdit" name="textEdit_3">
+     <property name="geometry">
+      <rect>
+       <x>590</x>
+       <y>50</y>
+       <width>104</width>
+       <height>87</height>
+      </rect>
      </property>
     </widget>
    </widget>
