--- a/Trading/pytrader.ui
+++ b/Trading/pytrader.ui
@@ -717,8 +717,8 @@
     <widget class="QPushButton" name="pushButton_11">
      <property name="geometry">
       <rect>
-       <x>240</x>
-       <y>130</y>
+       <x>250</x>
+       <y>200</y>
        <width>61</width>
        <height>28</height>
       </rect>
@@ -730,8 +730,8 @@
     <widget class="QPushButton" name="pushButton_12">
      <property name="geometry">
       <rect>
-       <x>310</x>
-       <y>130</y>
+       <x>320</x>
+       <y>200</y>
        <width>61</width>
        <height>28</height>
       </rect>
@@ -793,6 +793,52 @@
        <y>50</y>
        <width>104</width>
        <height>87</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_17">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>120</y>
+       <width>64</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>기준가격</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_8">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>120</y>
+       <width>81</width>
+       <height>21</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_19">
+     <property name="geometry">
+      <rect>
+       <x>240</x>
+       <y>150</y>
+       <width>64</width>
+       <height>15</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>수량</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_9">
+     <property name="geometry">
+      <rect>
+       <x>310</x>
+       <y>150</y>
+       <width>81</width>
+       <height>21</height>
       </rect>
      </property>
     </widget>
